// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`all at once 1`] = `
[
  {
    "a": 1,
    "b": true,
    "c": [
      "a",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": true,
    "c": [
      "a",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 1,
    "b": true,
    "c": [
      "b",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": true,
    "c": [
      "b",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [
      "a",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [
      "a",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [
      "b",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [
      "b",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "a",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "a",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "b",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "b",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "a",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "a",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "b",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "b",
    ],
    "d": {
      "d2": undefined,
    },
  },
]
`;

exports[`array > of a single value 1`] = `
[
  [
    1,
  ],
]
`;

exports[`array > of a union 1`] = `
[
  [
    1,
  ],
  [
    2,
  ],
]
`;

exports[`object > empty 1`] = `
[
  {},
]
`;

exports[`object > of a several value properties 1`] = `
[
  {
    "a": "A",
    "b": "B",
    "c": "C",
  },
]
`;

exports[`object > of a single value property 1`] = `
[
  {
    "a": "A",
  },
]
`;

exports[`union > of a single value 1`] = `
[
  1,
]
`;

exports[`union > of a union 1`] = `
[
  1,
  2,
  3,
]
`;

exports[`union > of several values 1`] = `
[
  1,
  2,
  3,
]
`;

exports[`union > of unions 1`] = `
[
  1,
  2,
  3,
  4,
]
`;

exports[`value > null 1`] = `
[
  null,
]
`;

exports[`value > number 1`] = `
[
  1,
]
`;

exports[`value > string 1`] = `
[
  "a",
]
`;
